# obsidian-search

./: pyproject.toml
.claude/commands/: sync-all.md
src/obsidian_search/: __init__.py  cli.py  core.py  database.py  embeddings.py  indexer.py  mcp_server.py  parser.py  web_app.py
src/obsidian_search/templates/: _note.html  _results.html  _status.html  index.html
